# MapleCombat

./: .gitattributes  .gitignore  .prettierignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-and-release.yml
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/buff/: 增益表.txt
src/components/buffs/: BuffItem.vue  BuffOverlay.vue  BuffPanel.vue  BuffSummaryBar.vue  SoulOrbControl.vue  tooltipPosition.ts
src/components/character/: BuffGainSummary.vue  CharacterDataHead.vue  CharacterInputView.vue  CombatPowerSummary.vue  CombatStatsPanel.vue  EffStatsPanel.vue  JobCombobox.vue  SpecialStatsCombat.vue  (+2 more)
src/composables/: useAutoZoom.ts  useCombatPowerFit.ts  useDensity.ts  useField.ts  useImportExport.ts  useTheme.ts
src/constants/: fields.ts
src/core/: actualDamage.ts  combatPower.ts  efficiency.ts  equipmentDelta.ts  familiar.ts  float32.ts  format.ts  types.ts  weaponCorrection.ts  weightedStates.ts
src/data/: buffSource.ts  jobs.ts  weapons.ts
src/services/: desktopWindow.ts  saveData.ts  tauri.ts
src/stores/: buffs.ts  character.ts  persist.ts  stateSlots.ts  ui.ts
src/styles/: base.css  buffs.css  calculator.css  compact-desktop.css  density.css  equipment.css  layout.css  theme-web.css
tests/unit/: buffTooltip.spec.ts  buffs-exclusive.spec.ts  core.spec.ts  desktopWindow.spec.ts  stores.spec.ts
tools/: sync-version.mjs
(+15 files in other folders)
